remove angle from nn, add pca6

--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,32 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "'../features/cnn_1_aug1_feat.pkl'\n",
       "'../features/cnn_1_aug_1_fold8_feat.pkl'\n",
-      "'../features/cnn_1_aug_ang_fold3_feat.pkl'\n",
       "'../features/cnn_1_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_1_aug_skimage_denoise_feat.pkl'\n",
       "'../features/cnn_1_aug_skimage_preprocess_feat.pkl'\n",
+      "'../features/cnn_1_feat.pkl'\n",
+      "'../features/cnn_2_aug1_feat.pkl'\n",
       "'../features/cnn_2_aug_1_fold8_feat.pkl'\n",
-      "'../features/cnn_2_aug_ang_fold3_feat.pkl'\n",
       "'../features/cnn_2_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_2_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_2_aug_skimage_preprocess_feat.pkl'\n",
+      "'../features/cnn_2_feat.pkl'\n",
+      "'../features/cnn_3_aug1_feat.pkl'\n",
       "'../features/cnn_3_aug_1_fold8_feat.pkl'\n",
-      "'../features/cnn_3_aug_ang_fold3_feat.pkl'\n",
       "'../features/cnn_3_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_3_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_3_aug_skimage_preprocess_feat.pkl'\n",
+      "'../features/cnn_4_aug1_feat.pkl'\n",
+      "'../features/cnn_4_aug1_feat_add_early.pkl'\n",
       "'../features/cnn_4_aug_1_fold8_feat.pkl'\n",
       "'../features/cnn_4_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_4_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_4_aug_skimage_preprocess_feat.pkl'\n",
+      "'../features/cnn_5_aug1_feat.pkl'\n",
       "'../features/cnn_5_aug_1_fold8_feat.pkl'\n",
       "'../features/cnn_5_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_5_aug_rescale_preprocess_feat.pkl'\n",
@@ -43,22 +48,27 @@
       "'../features/other_model_gbrt2.pkl'\n",
       "'../features/other_model_gbrt4.pkl'\n",
       "'../features/other_model_gbrt5.pkl'\n",
+      "'../features/other_model_gbrt6.pkl'\n",
       "'../features/other_model_lgb.pkl'\n",
       "'../features/other_model_lgb2.pkl'\n",
       "'../features/other_model_lgb4.pkl'\n",
       "'../features/other_model_lgb5.pkl'\n",
+      "'../features/other_model_lgb6.pkl'\n",
       "'../features/other_model_lr.pkl'\n",
       "'../features/other_model_lr2.pkl'\n",
       "'../features/other_model_lr4.pkl'\n",
       "'../features/other_model_lr5.pkl'\n",
+      "'../features/other_model_lr6.pkl'\n",
       "'../features/other_model_rf.pkl'\n",
       "'../features/other_model_rf2.pkl'\n",
       "'../features/other_model_rf4.pkl'\n",
       "'../features/other_model_rf5.pkl'\n",
+      "'../features/other_model_rf6.pkl'\n",
       "'../features/other_model_xgb.pkl'\n",
       "'../features/other_model_xgb2.pkl'\n",
       "'../features/other_model_xgb4.pkl'\n",
       "'../features/other_model_xgb5.pkl'\n",
+      "'../features/other_model_xgb6.pkl'\n",
       "'../features/resnet_1_feat.pkl'\n",
       "'../features/resnet_aug1_feat.pkl'\n",
       "'../features/resnet_aug1_fold8_feat.pkl'\n",
@@ -68,7 +78,8 @@
       "'../features/vgg16_1_feat.pkl'\n",
       "'../features/vgg_aug1_feat.pkl'\n",
       "'../features/vgg_aug1_fold8_feat.pkl'\n",
-      "'../features/vgg_aug1_new_feat.pkl'\n"
+      "'../features/vgg_aug1_new_feat.pkl'\n",
+      "'../features/xception_aug1_feat.pkl'\n"
      ]
     }
    ],
@@ -86,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 70) (8424, 70) (1604,)\n"
+      "(1604, 81) (8424, 81) (1604,)\n"
      ]
     }
    ],
@@ -117,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 260,
    "metadata": {
     "scrolled": false
    },
@@ -214,50 +225,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.635752\tvalid-logloss:0.639421\n",
+      "[0]\ttrain-logloss:0.636594\tvalid-logloss:0.639373\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[94]\ttrain-logloss:0.05332\tvalid-logloss:0.13468\n",
+      "[148]\ttrain-logloss:0.030052\tvalid-logloss:0.12336\n",
       "\n",
-      "[0]\ttrain-logloss:0.635412\tvalid-logloss:0.638175\n",
+      "[0]\ttrain-logloss:0.636517\tvalid-logloss:0.639395\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[77]\ttrain-logloss:0.060778\tvalid-logloss:0.150921\n",
+      "[80]\ttrain-logloss:0.057899\tvalid-logloss:0.141568\n",
       "\n",
-      "[0]\ttrain-logloss:0.635772\tvalid-logloss:0.638868\n",
+      "[0]\ttrain-logloss:0.637071\tvalid-logloss:0.639027\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[83]\ttrain-logloss:0.058372\tvalid-logloss:0.148168\n",
+      "[75]\ttrain-logloss:0.060227\tvalid-logloss:0.143718\n",
       "\n",
-      "local average valid loss 0.145707176694 val loss std 0.00725314028636\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.026680\n",
-      "1  4023181e    0.823259\n",
-      "2  b20200e4    0.062655\n",
-      "3  e7f018bb    0.996100\n",
-      "4  4371c8c3    0.120688\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.026978\n",
-      "1  4023181e    0.820278\n",
-      "2  b20200e4    0.061956\n",
-      "3  e7f018bb    0.996162\n",
-      "4  4371c8c3    0.122104\n"
+      "local average valid loss 0.137304774026 val loss std 0.00916458379182\n"
      ]
     }
    ],
    "source": [
-    "cv_test(3,42,True)"
+    "cv_test(3,42,False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 261,
    "metadata": {
     "scrolled": false
    },
@@ -266,64 +265,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.636038\tvalid-logloss:0.639706\n",
+      "[0]\ttrain-logloss:0.635896\tvalid-logloss:0.639603\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[67]\ttrain-logloss:0.074692\tvalid-logloss:0.152063\n",
+      "[104]\ttrain-logloss:0.047242\tvalid-logloss:0.14303\n",
       "\n",
-      "[0]\ttrain-logloss:0.636365\tvalid-logloss:0.638119\n",
+      "[0]\ttrain-logloss:0.636493\tvalid-logloss:0.637751\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[132]\ttrain-logloss:0.045035\tvalid-logloss:0.107758\n",
+      "[134]\ttrain-logloss:0.039225\tvalid-logloss:0.105996\n",
       "\n",
-      "[0]\ttrain-logloss:0.636239\tvalid-logloss:0.639725\n",
+      "[0]\ttrain-logloss:0.636255\tvalid-logloss:0.639429\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[100]\ttrain-logloss:0.052758\tvalid-logloss:0.159309\n",
+      "[69]\ttrain-logloss:0.067899\tvalid-logloss:0.158509\n",
       "\n",
-      "[0]\ttrain-logloss:0.636343\tvalid-logloss:0.640281\n",
+      "[0]\ttrain-logloss:0.636399\tvalid-logloss:0.639003\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[81]\ttrain-logloss:0.067466\tvalid-logloss:0.123393\n",
+      "[95]\ttrain-logloss:0.056775\tvalid-logloss:0.113499\n",
       "\n",
-      "[0]\ttrain-logloss:0.636076\tvalid-logloss:0.639039\n",
+      "[0]\ttrain-logloss:0.635953\tvalid-logloss:0.638862\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[78]\ttrain-logloss:0.064569\tvalid-logloss:0.156395\n",
+      "[58]\ttrain-logloss:0.076126\tvalid-logloss:0.166033\n",
       "\n",
-      "local average valid loss 0.14119461822 val loss std 0.0208272546261\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.019671\n",
-      "1  4023181e    0.808919\n",
-      "2  b20200e4    0.048040\n",
-      "3  e7f018bb    0.996971\n",
-      "4  4371c8c3    0.161602\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.019068\n",
-      "1  4023181e    0.818325\n",
-      "2  b20200e4    0.046319\n",
-      "3  e7f018bb    0.997096\n",
-      "4  4371c8c3    0.175054\n"
+      "local average valid loss 0.138568325138 val loss std 0.0246098639346\n"
      ]
     }
    ],
    "source": [
-    "cv_test(5,42,True)"
+    "cv_test(5,42,False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 262,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -335,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 263,
    "metadata": {
     "collapsed": true
    },
@@ -346,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 264,
    "metadata": {
     "collapsed": true
    },
@@ -357,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 265,
    "metadata": {
     "collapsed": true
    },
