--- a/other_hand_features/other_models_from_hand_feats_v6_pca.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v6_pca.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -90,67 +90,56 @@
     "        \n",
     "\n",
     "a_band1,a_band2,a_band3,a_band4,a_angs = get_other_feat(train_df)\n",
+    "a_bands = np.hstack([a_band1,a_band2,a_band3,a_band4])\n",
     "b_band1,b_band2,b_band3,b_band4,b_angs = get_other_feat(test_df)\n",
+    "b_bands = np.hstack([b_band1,b_band2,b_band3,b_band4])\n",
     "print('raw feats')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pca done (1604, 50)\n"
+      "pca done (1604, 60)\n"
      ]
     }
    ],
    "source": [
     "from sklearn import decomposition\n",
-    "comp = 50\n",
-    "pca_b1 = decomposition.PCA(n_components=comp, whiten=True, random_state=15)\n",
-    "pca_b2 = decomposition.PCA(n_components=comp, whiten=True, random_state=16)\n",
-    "pca_b3 = decomposition.PCA(n_components=comp, whiten=True, random_state=17)\n",
-    "pca_b4 = decomposition.PCA(n_components=comp, whiten=True, random_state=18)\n",
-    "\n",
-    "a_band1_feat = pca_b1.fit_transform(np.array(a_band1))\n",
-    "a_band2_feat = pca_b2.fit_transform(np.array(a_band2))\n",
-    "a_band3_feat = pca_b3.fit_transform(np.array(a_band3))\n",
-    "a_band4_feat = pca_b4.fit_transform(np.array(a_band4))\n",
-    "\n",
-    "b_band1_feat = pca_b1.transform(np.array(b_band1))\n",
-    "b_band2_feat = pca_b2.transform(np.array(b_band2))\n",
-    "b_band3_feat = pca_b3.transform(np.array(b_band3))\n",
-    "b_band4_feat = pca_b4.transform(np.array(b_band4))\n",
-    "\n",
-    "print('pca done',a_band1_feat.shape)"
+    "pca_b1 = decomposition.PCA(n_components=60, whiten=True, random_state=15)\n",
+    "a_band_feat = pca_b1.fit_transform(np.array(a_bands))\n",
+    "b_band_feat = pca_b1.transform(np.array(b_bands))\n",
+    "print('pca done',a_band_feat.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 221) (8424, 221)\n"
+      "(1604, 81) (8424, 81)\n"
      ]
     }
    ],
    "source": [
-    "train_feat = np.hstack([a_band1_feat,a_band2_feat,a_band3_feat,a_band4_feat,np.array(a_angs)])\n",
-    "test_feat = np.hstack([b_band1_feat,b_band2_feat,b_band3_feat,b_band4_feat,np.array(b_angs)])\n",
+    "train_feat = np.hstack([a_band_feat,np.array(a_angs)])\n",
+    "test_feat = np.hstack([b_band_feat,np.array(b_angs)])\n",
     "\n",
     "print(train_feat.shape,test_feat.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -224,17 +213,17 @@
       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
       "          verbose=0, warm_start=False)\n",
-      "this fold train loss 0.229916396005 val loss 0.448423534124\n",
+      "this fold train loss 0.304978910016 val loss 0.353619539152\n",
       "============================\n",
-      "this fold train loss 0.227237337199 val loss 0.478266737288\n",
+      "this fold train loss 0.296773673237 val loss 0.419147142997\n",
       "============================\n",
-      "this fold train loss 0.223011052401 val loss 0.494714550796\n",
+      "this fold train loss 0.294007358887 val loss 0.407384520371\n",
       "============================\n",
-      "this fold train loss 0.23191737697 val loss 0.421971990877\n",
+      "this fold train loss 0.299477368715 val loss 0.382922826899\n",
       "============================\n",
-      "this fold train loss 0.237887719148 val loss 0.414473665352\n",
+      "this fold train loss 0.304557952107 val loss 0.374991577994\n",
       "============================\n",
-      "all avg 0.229993976345 0.451570095687\n"
+      "all avg 0.299959052592 0.387613121483\n"
      ]
     }
    ],
@@ -245,13 +234,13 @@
     "                           fold_cnt=5,\n",
     "                           params={'C':2.0,'max_iter':100},rnd=2)\n",
     "import pickle\n",
-    "with open('../features/other_model_lr5.pkl','wb') as fout:\n",
+    "with open('../features/other_model_lr6.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -264,17 +253,17 @@
       "            min_samples_leaf=1, min_samples_split=2,\n",
       "            min_weight_fraction_leaf=0.0, n_estimators=25, n_jobs=1,\n",
       "            oob_score=False, random_state=42, verbose=0, warm_start=False)\n",
-      "this fold train loss 0.236693528102 val loss 0.410720955754\n",
+      "this fold train loss 0.245899628364 val loss 0.404622965179\n",
       "============================\n",
-      "this fold train loss 0.24545326116 val loss 0.378380299809\n",
+      "this fold train loss 0.236602547344 val loss 0.392056942495\n",
       "============================\n",
-      "this fold train loss 0.25528310747 val loss 0.382674611316\n",
+      "this fold train loss 0.244922154955 val loss 0.355714150822\n",
       "============================\n",
-      "this fold train loss 0.232883270576 val loss 0.372400844952\n",
+      "this fold train loss 0.247402992985 val loss 0.37329448864\n",
       "============================\n",
-      "this fold train loss 0.241476683899 val loss 0.380748696052\n",
+      "this fold train loss 0.23839690415 val loss 0.353265837689\n",
       "============================\n",
-      "all avg 0.242357970242 0.384985081576\n"
+      "all avg 0.24264484556 0.375790876965\n"
      ]
     }
    ],
@@ -286,13 +275,13 @@
     "    'random_state':42\n",
     "}\n",
     "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,params=tmp_params)\n",
-    "with open('../features/other_model_rf5.pkl','wb') as fout:\n",
+    "with open('../features/other_model_rf6.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -325,17 +314,15 @@
       "              min_weight_fraction_leaf=0.0, n_estimators=230,\n",
       "              presort='auto', random_state=42, subsample=1.0, verbose=0,\n",
       "              warm_start=False)\n",
-      "this fold train loss 0.0317809830181 val loss 0.268880044719\n",
+      "this fold train loss 0.037271571112 val loss 0.29468500102\n",
       "============================\n",
-      "this fold train loss 0.0313338029998 val loss 0.236646141961\n",
+      "this fold train loss 0.0380347646325 val loss 0.26771083521\n",
       "============================\n",
-      "this fold train loss 0.0323396521184 val loss 0.26348425245\n",
+      "this fold train loss 0.0394226185495 val loss 0.250253443085\n",
       "============================\n",
-      "this fold train loss 0.03095675678 val loss 0.292284447111\n",
+      "this fold train loss 0.0379901020607 val loss 0.290362750221\n",
       "============================\n",
-      "this fold train loss 0.0312389058258 val loss 0.263077176563\n",
-      "============================\n",
-      "all avg 0.0315300201484 0.264874412561\n"
+      "all avg 0.0381797640886 0.275753007384\n"
      ]
     }
    ],
@@ -348,17 +335,17 @@
     "    'min_samples_leaf':1,\n",
     "    'max_depth':3\n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(GradientBoostingClassifier,fold_cnt=5,\n",
+    "lr_train,lr_pred = cv_feat(GradientBoostingClassifier,fold_cnt=4,\n",
     "                           params=tmp_params,\n",
     "                           rnd=1\n",
     "                          )\n",
-    "with open('../features/other_model_gbrt5.pkl','wb') as fout:\n",
+    "with open('../features/other_model_gbrt6.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -371,17 +358,15 @@
       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
       "       silent=True, subsample=1)\n",
-      "this fold train loss 0.204493118465 val loss 0.324220771379\n",
+      "this fold train loss 0.221115502728 val loss 0.355704808677\n",
       "============================\n",
-      "this fold train loss 0.210131122239 val loss 0.302956643793\n",
+      "this fold train loss 0.232066542816 val loss 0.304556856796\n",
       "============================\n",
-      "this fold train loss 0.217470997353 val loss 0.298650399341\n",
+      "this fold train loss 0.216196940592 val loss 0.323056074216\n",
       "============================\n",
-      "this fold train loss 0.201142933805 val loss 0.333196300262\n",
+      "this fold train loss 0.213004084843 val loss 0.32770749289\n",
       "============================\n",
-      "this fold train loss 0.210257128038 val loss 0.321714240327\n",
-      "============================\n",
-      "all avg 0.20869905998 0.31614767102\n"
+      "all avg 0.220595767745 0.327756308145\n"
      ]
     }
    ],
@@ -395,15 +380,15 @@
     "\n",
     "    \n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(XGBClassifier,fold_cnt=5,\n",
+    "lr_train,lr_pred = cv_feat(XGBClassifier,fold_cnt=4,\n",
     "                           params=tmp_params,rnd=1)\n",
-    "with open('../features/other_model_xgb5.pkl','wb') as fout:\n",
+    "with open('../features/other_model_xgb6.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {
     "scrolled": false
    },
@@ -434,7 +419,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00125056944852 val loss 0.338489119731\n",
+      "this fold train loss 0.00426804129199 val loss 0.247307645473\n",
       "============================\n"
      ]
     },
@@ -452,7 +437,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00140465979348 val loss 0.283837113901\n",
+      "this fold train loss 0.00379854669527 val loss 0.370950996622\n",
       "============================\n"
      ]
     },
@@ -470,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0014321677666 val loss 0.283778423407\n",
+      "this fold train loss 0.00396328716695 val loss 0.284920258302\n",
       "============================\n"
      ]
     },
@@ -488,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0013837236445 val loss 0.342397624023\n",
+      "this fold train loss 0.00460958206931 val loss 0.229886915867\n",
       "============================\n"
      ]
     },
@@ -506,9 +491,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.00115615611576 val loss 0.323817773956\n",
+      "this fold train loss 0.00351689055121 val loss 0.393746870038\n",
+      "============================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:642: UserWarning: max_bin keyword has been found in `params` and will be ignored. Please use max_bin argument of the Dataset constructor to pass this parameter.\n",
+      "  'Please use {0} argument of the Dataset constructor to pass this parameter.'.format(key))\n",
+      "/usr/local/lib/python3.5/dist-packages/lightgbm/basic.py:648: LGBMDeprecationWarning: The `max_bin` parameter is deprecated and will be removed in 2.0.12 version. Please use `params` to pass this parameter.\n",
+      "  'Please use `params` to pass this parameter.', LGBMDeprecationWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this fold train loss 0.00368089413978 val loss 0.317014521943\n",
       "============================\n",
-      "all avg 0.00132545535377 0.314464011004\n"
+      "all avg 0.00397287365242 0.307304534708\n"
      ]
     }
    ],
@@ -520,8 +523,8 @@
     "    #'min_child_samples':20,\n",
     "    #'reg_lambda':0.1,\n",
     "}\n",
-    "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,params=tmp_params)\n",
-    "with open('../features/other_model_lgb5.pkl','wb') as fout:\n",
+    "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=6,params=tmp_params)\n",
+    "with open('../features/other_model_lgb6.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   }
