--- a/notebooks/inception_resnet_data_aug_2_deep.ipynb
+++ b/notebooks/inception_resnet_data_aug_2_deep.ipynb
@@ -55,12 +55,8 @@
     "        # Formulate the bands as 75x75 arrays\n",
     "        band_1 = np.array(row['band_1']).reshape(75, 75)\n",
     "        band_2 = np.array(row['band_2']).reshape(75, 75)\n",
-    "        band_3 = (band_1 - band_2)/2\n",
-    "        if row['inc_angle'] == 'na':\n",
-    "            ang = -1\n",
-    "        else:\n",
-    "            ang = float(row['inc_angle'])\n",
-    "        band_3 = band_3*ang\n",
+    "        band_3 = (band_1 + band_2)/2\n",
+    "\n",
     "        # Rescale\n",
     "        img = np.dstack([band_1,band_2,band_3])\n",
     "        img = std_img(img)\n",
@@ -3012,119 +3008,6 @@
     "\n",
     "# pre 2271\n",
     "# new 2118"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from keras.callbacks import ModelCheckpoint,LearningRateScheduler\n",
-    "from keras.models import Model\n",
-    "from keras.applications.xception import Xception\n",
-    "def create_model():\n",
-    "    base_model = Xception(include_top=False, weights=None, input_tensor=None, input_shape=(75,75,3), pooling='max')\n",
-    "    x = Dense(512,activation='relu')(base_model.output)\n",
-    "    x = Dropout(0.2)(x)\n",
-    "    x = Dense(1,activation='sigmoid')(x)\n",
-    "    return Model(inputs=base_model.input, outputs=x)\n",
-    "print('model model')\n",
-    "\n",
-    "\n",
-    "tmp_m = create_model()\n",
-    "tmp_m.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import KFold\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "import gc\n",
-    "\n",
-    "def lr_f(epoch):\n",
-    "    if epoch<10:\n",
-    "        return 0.001\n",
-    "    elif epoch<30:\n",
-    "        return 0.0005\n",
-    "    else:\n",
-    "        return 0.0001\n",
-    "\n",
-    "def kfold_train(fold_cnt=3,rnd=233):\n",
-    "    train_pred, test_pred = np.zeros((1604,1)),np.zeros((8424,1))\n",
-    "    kf = KFold(n_splits=fold_cnt, shuffle=True, random_state=2*rnd)\n",
-    "    for train_index, test_index in kf.split(train_x):\n",
-    "        curr_x,curr_y = train_x[train_index],y[train_index]\n",
-    "        val_x,val_y = train_x[test_index],y[test_index]\n",
-    "        datagen = ImageDataGenerator(\n",
-    "            width_shift_range=0.05,\n",
-    "            height_shift_range=0.05,\n",
-    "            shear_range=0.2,\n",
-    "            zoom_range=0.2,\n",
-    "            horizontal_flip=True,\n",
-    "            vertical_flip=True\n",
-    "        )\n",
-    "        \n",
-    "        \n",
-    "        bat_size = 12\n",
-    "        steps_train = len(curr_y)//bat_size\n",
-    "        \n",
-    "        \n",
-    "        model = create_model()\n",
-    "        model.compile(loss='binary_crossentropy', optimizer=Adam(0.0005), metrics=['accuracy'])\n",
-    "        model_p = 'best_m.h5'\n",
-    "        model_chk = ModelCheckpoint(filepath=model_p, monitor='val_loss', save_best_only=True, verbose=1)\n",
-    "        lr_s = LearningRateScheduler(lr_f)\n",
-    "        model.fit_generator(datagen.flow(curr_x, curr_y, batch_size=bat_size),\n",
-    "                  validation_data=(val_x,val_y),\n",
-    "                  steps_per_epoch = steps_train,\n",
-    "                  epochs=70, \n",
-    "                  verbose=2,\n",
-    "                  callbacks=[model_chk,lr_s]\n",
-    "                 )\n",
-    "        \n",
-    "        \n",
-    "        model = load_model(model_p)\n",
-    "        train_pred[test_index] = model.predict(val_x)\n",
-    "        test_pred = test_pred + model.predict(test_x)/fold_cnt\n",
-    "        \n",
-    "        del model\n",
-    "        gc.collect()\n",
-    "        print('============================')\n",
-    "    return train_pred,test_pred\n",
-    "\n",
-    "train_pred,test_pred = kfold_train(fold_cnt=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "with open('../features/xception_aug2_feat.pkl','wb') as fout:\n",
-    "    pickle.dump([train_pred,test_pred],fout)\n",
-    "\n",
-    "# train feat loss\n",
-    "from sklearn.metrics import log_loss\n",
-    "print(log_loss(y,train_pred))\n",
-    "    \n",
-    "submission = pd.DataFrame()\n",
-    "submission['id']=test_df['id']\n",
-    "submission['is_iceberg']=test_pred\n",
-    "print(submission.head())\n",
-    "submission.to_csv('../results/xception_aug2_sub.csv', index=False)"
    ]
   }
  ],
